[workspace]
members = [
    "crates/graphite",
    "crates/graphite-core",
]

resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Graphite Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/arshadbarves/graphite"
documentation = "https://docs.rs/graphite"
homepage = "https://graphite.rs"
readme = "README.md"
publish = true
categories = [
    "asynchronous",
    "development-tools",
    "science"
]
keywords = [
    "ai",
    "agents",
    "async",
    "graph",
    "framework"
]

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3.31"

# Serialization and state management
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Error handling
thiserror = "2.0.12"