[package]
name = "graphite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true
publish.workspace = true
categories.workspace = true
keywords.workspace = true
description = "A powerful, production-grade multi-agent framework for Rust"

[dependencies]
# Core foundation
graphite-core = { path = "../graphite-core" }

# Feature crates (optional)

[features]
